--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
    <h1>Main page</h1>
+   <h2>Підзаголовок</h2>
    <p>Some text</p>
    <p>Створено гілку text та додано цей абзац</p>
 </body>
