--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
    <h1>Main page</h1>
-   <p><a href="https://google.com.ua">Google.com.ua</a></p>
-   <p><a href="https://github.com">GitHub.com</a></p>
+   <p>Some text</p>
 </body>
 </html>
